--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -260,6 +260,9 @@ items:
                             type: object
                             description: Configuration of the RHPAM workbench
                             properties:
+                              keystoreSecret:
+                                type: string
+                                description: Keystore secret name
                               env:
                                 type: array
                                 items:
@@ -320,6 +323,9 @@ items:
                                   type: integer
                                   format: int
                                   description: Number of Server sets that will be deployed
+                                keystoreSecret:
+                                  type: string
+                                  description: Keystore secret name
                                 from:
                                   type: object
                                   description: Image definition to use for all the servers
@@ -450,10 +456,13 @@ items:
                                     hostnameHTTPS:
                                       type: string
                                       description: Secure hostname to set as redirect URL
-                          smartrouter:
+                          smartRouter:
                             type: object
                             description: Configuration of the RHPAM smart router
                             properties:
+                              keystoreSecret:
+                                type: string
+                                description: Keystore secret name
                               env:
                                 type: array
                                 items:
