--- a/deploy/examples/server_common_config.yaml
+++ b/deploy/examples/server_common_config.yaml
@@ -20,3 +20,8 @@ spec:
         resources:
           memory:
             limits: 2Gi
+    smartRouter:
+      env:
+        - name: MY_VALUE
+          value: "example"
+ 
