--- a/config/envs/rhdm-authoring.yaml
+++ b/config/envs/rhdm-authoring.yaml
@@ -31,6 +31,6 @@ console:
       metadata:
         name: "{{.ApplicationName}}-{{.Console.Name}}"
 ## KIE smartrouter BEGIN
-smartrouter:
+smartRouter:
   omit: true
 ## KIE smartrouter END
