--- a/config/envs/rhpam-authoring.yaml
+++ b/config/envs/rhpam-authoring.yaml
@@ -31,7 +31,7 @@ console:
       metadata:
         name: "{{.ApplicationName}}-{{.Console.Name}}"
 ## KIE smartrouter BEGIN
-smartrouter:
+smartRouter:
   omit: true
 ## KIE smartrouter END
 ## KIE Servers BEGIN
