--- a/deploy/examples/auth_ldap.yaml
+++ b/deploy/examples/auth_ldap.yaml
@@ -1,9 +1,9 @@
 apiVersion: app.kiegroup.org/v1
 kind: KieApp
 metadata:
-  name: rhdm-ldap
+  name: rhpam-ldap
 spec:
-  environment: rhdm-trial
+  environment: rhpam-production
   auth:
     ldap:
       url: ldaps://myldap.example.com
